Changes in version 1.1-5 (xx/xx/15)
    * Fixed problem with noise=0 for DSC_DBSTREAM.
    * Fixed iterator bug for DSC_DBSTREAM.

Changes in version 1.1-4 (05/24/15)
    * evaluate checks if DSD has cluster labels for external 
	      evaluation measures.
    * DSD_mlbenchmarkGenerator now shuffles data points.
    * DSC_ReadCSV gaines arguments skip and header.
    * DSC_DStream: was reimplemented in C++ (Rcpp),
        number of grids N can now be fixed by the user.
    * DSC_tNN was renamed DSC_DBSTREAM. Uses now SOM-style micro-cluster update 
        and was reimplemented in C++ (Rcpp).

Changes in version 1.1-1 (01/15/15)
    * DSC_DStream: fixed bug with removing too many sporadic grids
    * DSD_ReadCSV now uses readLine so it can read properly from URLs
    * updated vignette

Changes in version 1.1-0 (12/18/14)
    * update now directly dispatches
    * DSC_Memory replaces DSD_Wrapper
    * DSD_ReadCSV replaces DSD_ReadStream. Improved handling of blocking and
      end of stream.
    * added DSD_ReadDB (DBI interface)
    * get_points can now produce cluster and class information

Changes in version 1.0-3 (07/14/14)
    * Fixed precision and recall calculation
    * Added DSC_TwoStage

Changes in version 1.0-2 (06/16/14)
    * Warning for reclusterers removed.
    * plot can now show micro-cluster assignment areas using assignment=TRUE

Changes in version 1.0-1 (06/12/14)
    * Improved documentation
    * Improved DSD_MG
    * plot gained a dim argument to plot only selected dimensions
    * get_assignment gained a threshold argument
    * DSC_Window added
    * DSC_Sample gained a biased argument for biased sampling
    * DSC_Wrapper can now wrap matrix-like objects (e.g., from package ff and
        bigmemory)

Changes in version 1.0-0 (5/24/14)
    * added D-Stream (with attraction)
    * improved support for creating animations
    * tnn: new decay models, tNN without shared density now reclusters 
        using density reachability